Fix parsing of headers from certain D-Link routers

Dlink uPnP service spells "location" header as "lOCATION" (with
lower-case L) which confuses libktorrent expecting "Location",
"location" or "LOCATION". This patch makes uPnP plugin accept those
headers since they are valid.

Modified version of patch from Oleg Osipov.

REVIEW: 121463
BUG: 341716